[package]
name         = "solid-obj"
version      = "0.1.0"
edition      = "2021"
description  = "Wavefront OBJ 3D model loader/saver for the SolidRS ecosystem"
keywords     = ["obj", "3d", "model", "mesh", "wavefront"]
categories   = ["graphics", "rendering", "game-development"]
license      = "MIT"
repository   = "https://github.com/Far-Beyond-Pulsar/solid-rs"

[dependencies]
solid-rs = { workspace = true }
glam     = { workspace = true }

[features]
# Enable the configurator schema for this format (see solid-rs `configurator`).
configurator = ["solid-rs/configurator"]

[dev-dependencies]
solid-rs = { workspace = true }
glam     = { workspace = true }
