[package]
name          = "solid-rs"
description   = "A generic 3D model loading and saving library — core traits, scene primitives, and a format registry. Analogous to serde; format crates (solid-obj, solid-fbx, solid-gltf …) implement the Loader / Saver traits."
keywords      = ["3d", "model", "mesh", "scene", "graphics"]
categories    = ["graphics", "rendering", "game-development"]
readme        = "../../README.md"

version       = "0.1.0"
edition       = "2021"
authors       = ["SolidRS Contributors"]
license       = "MIT"
repository    = "https://github.com/Far-Beyond-Pulsar/solid-rs"
homepage      = "https://github.com/Far-Beyond-Pulsar/solid-rs"
documentation = "https://docs.rs/solid-rs"

[dependencies]
glam      = { workspace = true }
thiserror = { workspace = true }
serde     = { workspace = true, optional = true }

[dev-dependencies]
glam = { workspace = true }

# ── feature flags ───────────────────────────────────────────────────────────
[features]
# Runtime-introspectable import options: adds the `configurator` module plus
# `Loader::options_schema` / `Loader::load_configured`, letting a host render an
# import configurator UI from a loader's option schema. Off by default so plain
# consumers don't pull `serde` or the extra surface; the engine enables it.
configurator = ["dep:serde"]
