[package]
name         = "solid-usd"
description  = "OpenUSD / USDA loader and saver for SolidRS"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
homepage.workspace   = true
keywords     = ["usd", "usda", "openusd", "3d", "scene"]
categories   = ["graphics", "rendering", "game-development"]

[dependencies]
solid-rs  = { workspace = true }
glam      = { workspace = true }
thiserror = { workspace = true }
lz4_flex  = { workspace = true }
zip       = { workspace = true }

[features]
# Enable the configurator schema for this format (see solid-rs `configurator`).
configurator = ["solid-rs/configurator"]

[dev-dependencies]
solid-rs = { workspace = true }
glam     = { workspace = true }
